# wito

./: .gitignore  404.html  README.md  gen_ref_pages.py  index.html  mkdocs.yaml  objects.inv  poetry.toml  pyproject.toml  requirements.docs.txt
.github/workflows/: docs.yaml
docs/: gen_ref_pages.py
docs/reference/configuration/: settings.md
examples/: appName  index.html  wito-config.json
reference/SUMMARY/: index.html
reference/configuration/settings/: index.html
reference/wito/: index.html
reference/wito/application/: index.html
reference/wito/core/: index.html
reference/wito/extensions/: index.html
reference/wito/extensions/ext_loader/: index.html
reference/wito/file_watcher/: index.html
reference/wito/interface/: index.html
reference/wito/notifications/: index.html
reference/wito/screen/: index.html
reference/wito/utils/: index.html
reference/wito/window/: index.html
search/: search_index.json
wito/: application.py  bridge.py  core.py  file_watcher.py  interface.py  notifications.py  screen.py  utils.py  window.py
wito/extensions/: ext_loader.py  webkit.css  webkit.js
wito/js/: interface.js  method_template.js  property_template.js
